--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "svgr": "npx @svgr/cli --no-dimensions --jsx-runtime automatic --typescript --ext tsx --out-dir .\\src\\assets\\dist -- .\\src\\assets"
   },
   "dependencies": {
+    "axios": "^1.6.2",
     "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
